--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
  <head> 
   <title>Portfolio  |  Ayush Shankhwar</title> 
+  <meta name="viewport" content="width=device.width initial-scale=1">	 
   <link rel = "icon" href = "https://lh3.googleusercontent.com/iHX1WLsbEbwdpFRxath8mwpxwZAXrnfpmb7c_go-yR8_2gu90KESxbnbzxTcVV0kCoyaGz0Eoa_i4Knmhp3F9qfeFzKD3OZD4RCE40VkbBKUob0tdZVeFN38cpbsXg_LbG1S3juicQ=w2400" type = "image/x-icon">
 <style>
 
